# MCP-TUTORIAL

./: pyproject.toml
src/mcp_tutorial/: client.py  main.py
